apps/base/linkwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
