apps/base/linkwarden/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
    gateway.excloo.dev/private-access: "true"
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: linkwarden
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkwarden-database
  namespace: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: linkwarden
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      cnpg.io/cluster: linkwarden-database
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkwarden-meilisearch
  namespace: linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: linkwarden
      ports:
        - port: 7700
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: meilisearch
  policyTypes:
    - Ingress
